5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1642_2449.log
== TEST (2019-06-10 19:34:10) 
-- CODE:
a= float(input("Digite o coef. 'a': "))
b= float(input("Digite o coef. 'b': "))
c= float(input("Digite o coef. 'c': "))
d= float(input("Digite o coef. 'd': "))
e= float(input("Digite o coef. 'e': "))
f= float(input("Digite o coef. 'f': "))
h= ((a*e)-(b*d))
x= ((c*e)-(b*f)) / h
y= ((a*f)-(c*d)) / h
if (h == 0):
	print("Nao tem solucao")
else: 
	print(round(x),2)
	print(round(y),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x= ((c*e)-(b*f)) / h
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:36:22) 
-- CODE:
a= int(input("Digite o coef. 'a': "))
b= int(input("Digite o coef. 'b': "))
c= int(input("Digite o coef. 'c': "))
d= int(input("Digite o coef. 'd': "))
e= int(input("Digite o coef. 'e': "))
f= int(input("Digite o coef. 'f': "))
h= ((a*e)-(b*d))
x= ((c*e)-(b*f)) // h
y= ((a*f)-(c*d)) // h
if (h == 0):
	print("Nao tem solucao")
else: 
	print(round(x),2)
	print(round(y),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 19:36:35) 
-- CODE:
a= int(input("Digite o coef. 'a': "))
b= int(input("Digite o coef. 'b': "))
c= int(input("Digite o coef. 'c': "))
d= int(input("Digite o coef. 'd': "))
e= int(input("Digite o coef. 'e': "))
f= int(input("Digite o coef. 'f': "))
h= ((a*e)-(b*d))
x= ((c*e)-(b*f)) // h
y= ((a*f)-(c*d)) // h
if (h == 0):
	print("Nao tem solucao")
else: 
	print(round(x),2)
	print(round(y),2)
-- EXECUTION TIME:
0.667675
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 1, in <module>
    a= int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:42:11) 
-- CODE:
a= int(input("Digite o coef. 'a': "))
b= int(input("Digite o coef. 'b': "))
c= int(input("Digite o coef. 'c': "))
d= int(input("Digite o coef. 'd': "))
e= int(input("Digite o coef. 'e': "))
f= int(input("Digite o coef. 'f': "))
#h= ((a*e)-(b*d))
#x= ((c*e)-(b*f)) // h
#y= ((a*f)-(c*d)) // h
if (x == (((c*e)-(b*f))/((a*e)-(b*d))) and y == (((a*f)-(c*d)/ (a*e)-(b*d))) and ((a*e)-(b*d)) =! 0):
	print(x)
	print(y)
else: 
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 10
    if (x == (((c*e)-(b*f))/((a*e)-(b*d))) and y == (((a*f)-(c*d)/ (a*e)-(b*d))) and ((a*e)-(b*d)) =! 0):
                                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:42:27) 
-- CODE:
a= int(input("Digite o coef. 'a': "))
b= int(input("Digite o coef. 'b': "))
c= int(input("Digite o coef. 'c': "))
d= int(input("Digite o coef. 'd': "))
e= int(input("Digite o coef. 'e': "))
f= int(input("Digite o coef. 'f': "))
#h= ((a*e)-(b*d))
#x= ((c*e)-(b*f)) // h
#y= ((a*f)-(c*d)) // h
if (x == (((c*e)-(b*f))/((a*e)-(b*d))) and y == (((a*f)-(c*d)/ (a*e)-(b*d))) and ((a*e)-(b*d)) != 0):
	print(x)
	print(y)
else: 
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:45:16) 
-- CODE:
a= int(input("Digite o coef. 'a': "))
b= int(input("Digite o coef. 'b': "))
c= int(input("Digite o coef. 'c': "))
d= int(input("Digite o coef. 'd': "))
e= int(input("Digite o coef. 'e': "))
f= int(input("Digite o coef. 'f': "))
h= ((a*e)-(b*d))
x= ((c*e)-(b*f)) / h
y= ((a*f)-(c*d)) / h
if (h == 0): 
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 19:45:39) 
-- CODE:
a= int(input("Digite o coef. 'a': "))
b= int(input("Digite o coef. 'b': "))
c= int(input("Digite o coef. 'c': "))
d= int(input("Digite o coef. 'd': "))
e= int(input("Digite o coef. 'e': "))
f= int(input("Digite o coef. 'f': "))
h= ((a*e)-(b*d))
x= ((c*e)-(b*f)) / h
y= ((a*f)-(c*d)) / h
if (h == 0): 
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.785025
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 1, in <module>
    a= int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:45:53) 
-- CODE:
a= int(input("Digite o coef. 'a': "))
b= int(input("Digite o coef. 'b': "))
c= int(input("Digite o coef. 'c': "))
d= int(input("Digite o coef. 'd': "))
e= int(input("Digite o coef. 'e': "))
f= int(input("Digite o coef. 'f': "))
h= ((a*e)-(b*d))
x= ((c*e)-(b*f)) // h
y= ((a*f)-(c*d)) // h
if (h == 0): 
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:46:13) 
-- CODE:
a= int(input("Digite o coef. 'a': "))
b= int(input("Digite o coef. 'b': "))
c= int(input("Digite o coef. 'c': "))
d= int(input("Digite o coef. 'd': "))
e= int(input("Digite o coef. 'e': "))
f= int(input("Digite o coef. 'f': "))
h= ((a*e)-(b*d))
x= ((c*e)-(b*f)) / h
y= ((a*f)-(c*d)) / h
if (h == 0): 
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:46:23) 
-- CODE:
a= int(input("Digite o coef. 'a': "))
b= int(input("Digite o coef. 'b': "))
c= int(input("Digite o coef. 'c': "))
d= int(input("Digite o coef. 'd': "))
e= int(input("Digite o coef. 'e': "))
f= int(input("Digite o coef. 'f': "))
h= ((a*e)-(b*d))
x= ((c*e)-(b*f)) / h
y= ((a*f)-(c*d)) / h
if (h == 0): 
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
